--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -5,13 +5,9 @@ $gray-800: #262626;
 $black: #0d0d0d;
 $green: #20db2c;
 
-$font: "Fira Sans";
+$font: "Roboto";
 
 $font-regular: 400;
-$font-semi-bold: 600;
+$font-semi-bold: 500;
 $font-bold: 700;
-$font-extra-bold: 800;
-
-
-
-
+$font-extra-bold: 900;
