--- a/src/app/containers/pages/home/home.component.scss
+++ b/src/app/containers/pages/home/home.component.scss
@@ -146,6 +146,7 @@
     background-color: #6bbaff;
   }
   &--dark {
+    color: #ffffff;
     background-color: #171717;
   }
   &--flying {
@@ -155,6 +156,7 @@
     background-color: #656565;
   }
   &--blank {
+    color: #ffffff;
     background-color: #000000;
   }
 }
@@ -189,5 +191,35 @@
 .newPokemons-icon{
   transform: rotate(270deg) scale(2);
   transition: transform 0.3s;
+}
+.chip-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 2rem 7rem;
+}
+
+.chip-types {
+  text-transform: capitalize;
+  font-size: 1rem;
+  padding: 0.5rem 1rem;
+  border: 2px solid #ffffff;
+  border-radius: 7px;
+  cursor: pointer;
+  transition: transform 0.3s;
+  margin: 0.5rem;
+  &:hover {
+    transform: scale(1.3);
+  }
+  &:focus {
+    transform: scale(1.3);
+  }
+
+  &--blank{
+    &:focus {
+      transform: scale(1);
+    }
+  }
 }
 
