--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -14,6 +14,11 @@ button {
 	font: $font-regular 1rem $font, sans-serif;
 }
 
+input {
+  outline-offset: 0px !important;
+  outline: none !important;
+}
+
 button {
 	cursor: pointer;
 }
