--- a/src/app/containers/pages/home/home.component.scss
+++ b/src/app/containers/pages/home/home.component.scss
@@ -18,6 +18,37 @@
   justify-content: center;
 }
 
+.filters {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  margin: 2rem 0;
+}
+
+.name-filter {
+  font-size: 1.2rem;
+  padding: 1rem 2rem;
+  border-radius: 10px;
+  border: none;
+  color: #000000;
+  background-color: #ffffff;
+  border: 2px solid #000000;
+
+  &:focus {
+    border: 2px solid #444444;
+  }
+
+  &::placeholder{
+    color: #000000;
+  }
+
+  &:disabled{
+    filter: brightness(0.5);
+    background-color: #999999;
+  }
+}
+
+
 .pokemon {
   text-transform: capitalize;
   font-weight: bold;
@@ -31,7 +62,7 @@
   cursor: pointer;
   padding: 1rem;
   width: 13.5rem;
-  box-shadow: 2px 2px #000000;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.75));
 
   &:hover{
     .pokemon-img{
@@ -50,8 +81,7 @@
   padding: 0.1rem 2rem;
   border-radius: 10px;
   font-weight: $font-semi-bold;
-  text-shadow: 1px 1px 10px black;
-  box-shadow: 2px 2px #000000;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.75));
 }
 
 .pokemon-bg {
@@ -59,7 +89,7 @@
   width: 12rem;
   height: 12rem;
   border-radius: 50%;
-  box-shadow: 2px 2px #000000;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.75));
   display: flex;
   justify-content: center;
 }
@@ -79,8 +109,9 @@
   background-color: #FFFFFF;
   border-radius: 10px;
   font-size: 1.1rem;
-  text-shadow: 1px 1px 10px black;
-  box-shadow: 2px 2px #000000;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.75));
+  position: relative;
+  z-index: -1;
 }
 
 .types {
@@ -93,10 +124,10 @@
   padding: 0.1rem 0.8rem;
   margin: 0 0.5rem;
   border-radius: 10px;
-  background-color: $black;
-  font-weight: $font-regular;
-  text-shadow: 1px 1px 10px #fff;
-  box-shadow: 2px 2px #000000;
+  background-color: #fff;
+  font-weight: $font-semi-bold;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.75));
+  color: #000000;
 }
 
 .type {
@@ -174,7 +205,7 @@
   width: 15%;
   border: none;
   border-radius: 10px;
-  box-shadow: 2px 2px #000000;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.75));
   font-size: 1.5rem;
   transition: filter 0.3s;
   display: flex;
@@ -197,7 +228,7 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  padding: 2rem 7rem;
+  padding: 0 7rem;
 }
 
 .chip-types {
@@ -210,9 +241,6 @@
   transition: transform 0.3s;
   margin: 0.5rem;
   &:hover {
-    transform: scale(1.3);
-  }
-  &:focus {
     transform: scale(1.3);
   }
 
