--- a/src/app/containers/components/footer/footer.component.scss
+++ b/src/app/containers/components/footer/footer.component.scss
@@ -1,7 +1,7 @@
 @import "includes.scss";
 
 .footer-container{
-	height: 6rem;
+	height: 10vh;
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
