--- a/src/app/containers/components/header/header.component.scss
+++ b/src/app/containers/components/header/header.component.scss
@@ -6,7 +6,7 @@
 	align-items: center;
 	justify-content: space-between;
 	width: 100%;
-	height: 9rem;
+	height: 12vh;
 	padding: 0 3rem;
 }
 
@@ -15,8 +15,8 @@
 	align-items: center;
 
 	&--logo{
-		width: 8rem;
-		border: 1px solid #fff;
+		width: 10vh;
+		border: 0.1rem solid #fff;
 		border-radius: 50%;
 		margin-right: 1rem;
     box-shadow: 2px 2px #000000;
