--- a/src/app/containers/pages/home/home.component.scss
+++ b/src/app/containers/pages/home/home.component.scss
@@ -8,14 +8,45 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   padding: 2rem;
+  min-height: 78vh;
+}
+
+.loading {
+  margin: 2rem 0;
 }
 
 .content {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+}
+
+.chip-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 0 7rem;
+}
+
+.chip-types {
+  text-transform: capitalize;
+  font-size: 1rem;
+  padding: 0.5rem 1rem;
+  border: 2px solid #ffffff;
+  border-radius: 7px;
+  cursor: pointer;
+  transition: transform 0.3s;
+  margin: 0.5rem;
+  &:hover {
+    transform: scale(1.3);
+  }
+
+  &--blank{
+    font-size: 1.2rem;
+    padding: 1rem 2rem;
+  }
 }
 
 .filters {
@@ -25,7 +56,7 @@
   margin: 2rem 0;
 }
 
-.name-filter {
+.filter {
   font-size: 1.2rem;
   padding: 1rem 2rem;
   border-radius: 10px;
@@ -47,7 +78,6 @@
     background-color: #999999;
   }
 }
-
 
 .pokemon {
   text-transform: capitalize;
@@ -192,62 +222,5 @@
   }
 }
 
-.loading {
-  margin: 2rem 0;
-}
 
-.newPokemons {
-  margin-top: 1rem;
-  text-align: center;
-  cursor: pointer;
-  padding: 2rem;
-  background-color: #6c64e0;
-  width: 15%;
-  border: none;
-  border-radius: 10px;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.75));
-  font-size: 1.5rem;
-  transition: filter 0.3s;
-  display: flex;
-  justify-content: center;
-
-  &:hover {
-    filter: brightness(0.75);
-    .newPokemons-icon {
-      transform: rotate(270deg) scale(3);
-    }
-  }
-}
-
-.newPokemons-icon{
-  transform: rotate(270deg) scale(2);
-  transition: transform 0.3s;
-}
-.chip-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  padding: 0 7rem;
-}
-
-.chip-types {
-  text-transform: capitalize;
-  font-size: 1rem;
-  padding: 0.5rem 1rem;
-  border: 2px solid #ffffff;
-  border-radius: 7px;
-  cursor: pointer;
-  transition: transform 0.3s;
-  margin: 0.5rem;
-  &:hover {
-    transform: scale(1.3);
-  }
-
-  &--blank{
-    &:focus {
-      transform: scale(1);
-    }
-  }
-}
 
