feat: alterando logo

--- a/src/app/containers/components/header/header.component.html
+++ b/src/app/containers/components/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 	<a class="profile-container" href="https://www.linkedin.com/in/marcos-wergles/" target="_blank">
-		<img class="profile-container--logo" src="assets/img/logo.png" alt="Logo Pokedex" />
+		<img class="profile-container--logo" src="assets/img/logo.svg" alt="Logo Pokedex" />
 		<p class="profile-container--name">Pokedex</p>
 	</a>
 	<nav>
