--- a/src/app/containers/pages/home/home.component.html
+++ b/src/app/containers/pages/home/home.component.html
@@ -47,7 +47,7 @@
         <p class="pokemon-id">#<span *ngIf="pokemon.id <= 9">00</span><span *ngIf="pokemon.id < 99 && pokemon.id >= 10">0</span>{{pokemon.id}}</p>
         <div class="types">
           <div *ngFor="let type of pokemon.types; let index = index">
-            <p class="type" *ngIf="pokemon.types[index].type.name !== 'blank'">{{type.type.name}}</p>
+            <p class="type">{{type.type.name}}</p>
           </div>
         </div>
       </div>
