--- a/src/app/containers/pages/pokemon/pokemon.component.scss
+++ b/src/app/containers/pages/pokemon/pokemon.component.scss
@@ -20,10 +20,11 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin-top: 5rem;
+  margin-top: 3rem;
 }
 
 .back-button {
+  margin-top: 3rem;
   padding: 1rem;
   border-radius: 10px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.75));
@@ -312,7 +313,7 @@
 
 .stat-progress-bar {
   border-radius: 10px;
-  height: 10px;
+  height: 1rem;
 }
 
 .stat-name {
@@ -320,5 +321,7 @@
   text-transform: capitalize;
 }
 
-
-
+.evolutions {
+  margin: 2rem 0;
+  width: 100%;
+}
