--- a/src/app/containers/pages/pokemon/pokemon.component.scss
+++ b/src/app/containers/pages/pokemon/pokemon.component.scss
@@ -198,6 +198,7 @@
   width: 50rem;
   height: 27rem;
   margin: 1rem;
+  padding: 1rem;
   border-radius: 10px;
   display: flex;
   align-items: center;
@@ -206,7 +207,7 @@
 }
 
 .types {
-  height: 80%;
+  height: 100%;
   width: 45%;
   border-radius: 10px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.75));
@@ -285,7 +286,7 @@
 }
 
 .stats {
-  height: 80%;
+  height: 100%;
   width: 45%;
   background-color: #333030;
   border-radius: 10px;
