feat: iniciando pagina de tipos, fraquezas e vantagens

--- a/src/app/containers/components/header/header.component.html
+++ b/src/app/containers/components/header/header.component.html
@@ -5,8 +5,8 @@
 	</a>
 	<nav>
 		<ul class="menu">
-			<li [class.focused]="inicio" (click)="clickToGo('')">Pokemons</li>
-			<li [class.focused]="sobreMim" (click)="clickToGo('sobre-mim')">Berrys</li>
+			<li [class.focused]="pokemons" (click)="clickToGo('')">Pokemons</li>
+			<li [class.focused]="types" (click)="clickToGo('types')">Types</li>
 			<li [class.focused]="carreira" (click)="clickToGo('carreira')">Locates</li>
 			<li [class.focused]="portifolio" (click)="clickToGo('portifolio')">Games</li>
 			<li [class.focused]="contato" (click)="clickToGo('contato')">History</li>
