--- a/src/app/containers/pages/pokemon/pokemon.component.html
+++ b/src/app/containers/pages/pokemon/pokemon.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<app-header [selected]="'pokemons'"></app-header>
 <div class="root">
   <div class="container">
     <mat-chip class="back-button" (click)="goBack()" *ngIf="!isLoading">
