--- a/src/app/containers/components/header/header.component.scss
+++ b/src/app/containers/components/header/header.component.scss
@@ -48,13 +48,15 @@
 		&:hover {
 			color: $green;
 		}
-
-		&.focused{
-			color: $green;
-		}
 	}
+
+  .ativo{
+    color: $green;
+  }
 
 	button {
 		margin-left: 2rem;
 	}
 }
+
+
