--- a/src/app/containers/pages/home/home.component.html
+++ b/src/app/containers/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="root">
-  <app-header [selected]="'pokemons'"></app-header>
+  <app-header></app-header>
   <div class="container">
     <div class="chip-container">
       <mat-chip
