--- a/src/app/containers/pages/types/types.component.html
+++ b/src/app/containers/pages/types/types.component.html
@@ -1,4 +1,4 @@
-<app-header [selected]="'types'"></app-header>
+<app-header></app-header>
 <div class="container">
   <app-loading *ngIf="isLoading"></app-loading>
   <div class="content">
