--- a/src/app/containers/components/evolutions/evolutions.component.scss
+++ b/src/app/containers/components/evolutions/evolutions.component.scss
@@ -1,170 +1,170 @@
-@import "includes.scss";
+@import 'includes.scss';
 
 .root {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .evolutions-box {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  background-color: $gray-800;
-  border-radius: 10px;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.75));
-  padding: 2rem;
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	align-items: center;
+	background-color: $gray-800;
+	border-radius: 10px;
+	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.75));
+	padding: 2rem;
 }
 
 .title {
-  font-size: 2rem;
-  letter-spacing: 0.2rem;
-  font-weight: $font-semi-bold;
+	font-size: 2rem;
+	letter-spacing: 0.2rem;
+	font-weight: $font-semi-bold;
 }
 
 .pokemons-box {
-  display: flex;
+	display: flex;
 }
 
 .pokemon {
-  text-transform: capitalize;
-  font-weight: bold;
-  margin: 2rem;
-  background-color: $gray-800;
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  padding: 1rem;
-  width: 13.5rem;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.75));
+	text-transform: capitalize;
+	font-weight: bold;
+	margin: 2rem;
+	background-color: $gray-800;
+	border-radius: 10px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	cursor: pointer;
+	padding: 1rem;
+	width: 13.5rem;
+	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.75));
 
-  &:hover{
-    .pokemon-img{
-      filter: brightness(0.75);
-      transform: scale(1.2);
-    }
-  }
+	&:hover {
+		.pokemon-img {
+			filter: brightness(0.75);
+			transform: scale(1.2);
+		}
+	}
 }
 
 .pokemon-name {
-  text-transform: capitalize;
-  font-size: 1.2rem;
-  color: $black;
-  margin-bottom: 1rem;
-  background-color: aliceblue;
-  padding: 0.1rem 2rem;
-  border-radius: 10px;
-  font-weight: $font-semi-bold;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.75));
+	text-transform: capitalize;
+	font-size: 1.2rem;
+	color: $black;
+	margin-bottom: 1rem;
+	background-color: aliceblue;
+	padding: 0.1rem 2rem;
+	border-radius: 10px;
+	font-weight: $font-semi-bold;
+	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.75));
 }
 
 .pokemon-bg {
-  background-color: #ffffff;
-  width: 12rem;
-  height: 12rem;
-  border-radius: 50%;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.75));
-  display: flex;
-  justify-content: center;
+	background-color: #ffffff;
+	width: 12rem;
+	height: 12rem;
+	border-radius: 50%;
+	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.75));
+	display: flex;
+	justify-content: center;
 }
 
 .pokemon-img {
-  height: 12rem;
-  width: 12rem;
-  transition: filter 0.3s, transform 0.3s;
+	height: 12rem;
+	width: 12rem;
+	transition: filter 0.3s, transform 0.3s;
 }
 
 .pokemon-id {
-  margin: 1rem 0;
-  padding: 0.1rem 2rem;
-  color: $black;
-  font-weight: $font-semi-bold;
-  background-color: #FFFFFF;
-  border-radius: 10px;
-  font-size: 1.1rem;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.75));
-  position: relative;
-  z-index: -1;
+	margin: 1rem 0;
+	padding: 0.1rem 2rem;
+	color: $black;
+	font-weight: $font-semi-bold;
+	background-color: #ffffff;
+	border-radius: 10px;
+	font-size: 1.1rem;
+	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.75));
+	position: relative;
+	z-index: -1;
 }
 
 .types {
-  display: flex;
-  width: 100%;
-  justify-content: center;
+	display: flex;
+	width: 100%;
+	justify-content: center;
 }
 
 .type {
-  padding: 0.1rem 0.8rem;
-  margin: 0 0.5rem;
-  border-radius: 10px;
-  background-color: #fff;
-  font-weight: $font-semi-bold;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.75));
-  color: #000000;
+	padding: 0.1rem 0.8rem;
+	margin: 0 0.5rem;
+	border-radius: 10px;
+	background-color: #fff;
+	font-weight: $font-semi-bold;
+	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.75));
+	color: #000000;
 }
 
 .type {
-  &--fire {
-    background-color: #ff3e3e;
-  }
-  &--grass {
-    background-color: #0da500;
-  }
-  &--water {
-    background-color: #2462d4;
-  }
-  &--bug {
-    background-color: #5da807;
-  }
-  &--electric {
-    background-color: #ffe600;
-  }
-  &--psychic {
-    background-color: #bf3f9a;
-  }
-  &--poison {
-    background-color: #a70cad;
-  }
-  &--ground {
-    background-color: #a54405;
-  }
-  &--fairy {
-    background-color: #ff00cd;
-  }
-  &--rock {
-    background-color: #55412a;
-  }
-  &--ghost {
-    background-color: #333030;
-  }
-  &--normal {
-    background-color: #888888;
-  }
-  &--fighting {
-    background-color: #a06119;
-  }
-  &--dragon {
-    background-color: #6e85af;
-  }
-  &--ice {
-    background-color: #6bbaff;
-  }
-  &--dark {
-    color: #ffffff;
-    background-color: #171717;
-  }
-  &--flying {
-    background-color: #2ba068;
-  }
-  &--steel {
-    background-color: #656565;
-  }
-  &--blank {
-    color: #ffffff;
-    background-color: #000000;
-  }
+	&--fire {
+		background-color: #ff3e3e;
+	}
+	&--grass {
+		background-color: #0da500;
+	}
+	&--water {
+		background-color: #2462d4;
+	}
+	&--bug {
+		background-color: #5da807;
+	}
+	&--electric {
+		background-color: #ffe600;
+	}
+	&--psychic {
+		background-color: #bf3f9a;
+	}
+	&--poison {
+		background-color: #a70cad;
+	}
+	&--ground {
+		background-color: #a54405;
+	}
+	&--fairy {
+		background-color: #ff00cd;
+	}
+	&--rock {
+		background-color: #55412a;
+	}
+	&--ghost {
+		background-color: #333030;
+	}
+	&--normal {
+		background-color: #888888;
+	}
+	&--fighting {
+		background-color: #a06119;
+	}
+	&--dragon {
+		background-color: #6e85af;
+	}
+	&--ice {
+		background-color: #6bbaff;
+	}
+	&--dark {
+		color: #ffffff;
+		background-color: #171717;
+	}
+	&--flying {
+		background-color: #2ba068;
+	}
+	&--steel {
+		background-color: #656565;
+	}
+	&--blank {
+		color: #ffffff;
+		background-color: #000000;
+	}
 }
