--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -5,7 +5,7 @@ $gray-800: #262626;
 $black: #0d0d0d;
 $green: #20db2c;
 
-$font: "Roboto";
+$font: 'Roboto';
 
 $font-regular: 400;
 $font-semi-bold: 500;
