--- a/src/app/containers/pages/pokemon/pokemon.component.html
+++ b/src/app/containers/pages/pokemon/pokemon.component.html
@@ -1,54 +1,61 @@
 <app-header></app-header>
 <div class="root">
-  <div class="container">
-    <mat-chip class="back-button" routerLink="/pokemons" *ngIf="!isLoading">
-      <mat-icon class="back-button-icon-home">home</mat-icon>
-      <mat-icon class="back-button-icon">arrow_back</mat-icon>
-    </mat-chip>
-    <app-loading *ngIf="isLoading"></app-loading>
-    <div class="content" *ngIf="!isLoading">
-      <div class="pokemon type--{{pokemon.types[0].name}}">
-        <p class="pokemon-name">{{pokemon.name}}</p>
-        <div class="pokemon-bg">
-          <img class="pokemon-img" [src]="pokemon.sprite" [alt]="pokemon.name" >
-        </div>
-        <p class="pokemon-id">#<span *ngIf="pokemon.id <= 9">00</span><span *ngIf="pokemon.id < 99 && pokemon.id >= 10">0</span>{{pokemon.id}}</p>
-        <div class="pokemon-types">
-          <div *ngFor="let type of pokemon.types; let index = index">
-            <p class="pokemon-type">{{type.name}}</p>
-          </div>
-        </div>
-      </div>
-      <div class="details type--{{pokemon.types[0].name}}">
-        <div class="types">
-          <div class="advantages">
-            <p class="type-name">Advantages</p>
-            <div class="types-advantages">
-              <span class="type-advantage type--{{type.name}}" *ngFor="let type of pokemon.types[0].advantages">{{type.name}}</span>
-            </div>
-          </div>
-          <div class="weaknesses">
-            <p class="type-name">Weakness</p>
-            <div class="types-weaknesses">
-              <span class="type-weakness type--{{type.name}}" *ngFor="let type of pokemon.types[0].weaknesses">{{type.name}}</span>
-            </div>
-          </div>
-        </div>
-        <div class="stats">
-          <div class="stat" *ngFor="let stat of pokemon.stats">
-            <mat-progress-bar class="stat-progress-bar" mode="determinate"  [value]="stat.base_stat"></mat-progress-bar>
-            <p class="stat-name">{{stat.stat.name}} ({{stat.base_stat}})</p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <app-evolutions
-      class="evolutions"
-      [pokemons]="pokemonEvolutions"
-      *ngIf="!isLoading"
-      (newPokemon)="getPokemonById($event)"
-    >
-    </app-evolutions>
-  </div>
+	<div class="container">
+		<mat-chip class="back-button" routerLink="/pokemons" *ngIf="!isLoading">
+			<mat-icon class="back-button-icon-home">home</mat-icon>
+			<mat-icon class="back-button-icon">arrow_back</mat-icon>
+		</mat-chip>
+		<app-loading *ngIf="isLoading"></app-loading>
+		<div class="content" *ngIf="!isLoading">
+			<div class="pokemon type--{{ pokemon.types[0].name }}">
+				<p class="pokemon-name">{{ pokemon.name }}</p>
+				<div class="pokemon-bg">
+					<img class="pokemon-img" [src]="pokemon.sprite" [alt]="pokemon.name" />
+				</div>
+				<p class="pokemon-id">
+					#<span *ngIf="pokemon.id <= 9">00</span><span *ngIf="pokemon.id < 99 && pokemon.id >= 10">0</span
+					>{{ pokemon.id }}
+				</p>
+				<div class="pokemon-types">
+					<div *ngFor="let type of pokemon.types; let index = index">
+						<p class="pokemon-type">{{ type.name }}</p>
+					</div>
+				</div>
+			</div>
+			<div class="details type--{{ pokemon.types[0].name }}">
+				<div class="types">
+					<div class="advantages">
+						<p class="type-name">Advantages</p>
+						<div class="types-advantages">
+							<span class="type-advantage type--{{ type.name }}" *ngFor="let type of pokemon.types[0].advantages">{{
+								type.name
+							}}</span>
+						</div>
+					</div>
+					<div class="weaknesses">
+						<p class="type-name">Weakness</p>
+						<div class="types-weaknesses">
+							<span class="type-weakness type--{{ type.name }}" *ngFor="let type of pokemon.types[0].weaknesses">{{
+								type.name
+							}}</span>
+						</div>
+					</div>
+				</div>
+				<div class="stats">
+					<div class="stat" *ngFor="let stat of pokemon.stats">
+						<mat-progress-bar class="stat-progress-bar" mode="determinate" [value]="stat.base_stat"></mat-progress-bar>
+						<p class="stat-name">{{ stat.stat.name }} ({{ stat.base_stat }})</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<app-evolutions
+			class="evolutions"
+			[pokemons]="pokemonEvolutions"
+			*ngIf="!isLoading"
+			(newPokemon)="getPokemonById($event)"
+		>
+		</app-evolutions>
+	</div>
 </div>
 <app-footer></app-footer>
