--- a/src/app/containers/pages/types/types.component.scss
+++ b/src/app/containers/pages/types/types.component.scss
@@ -1,201 +1,200 @@
-@import "includes.scss";
+@import 'includes.scss';
 
 .container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 78vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	min-height: 78vh;
 }
 
 .content {
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
-  flex-wrap: wrap;
-  min-height: 78vh;
+	display: flex;
+	align-items: flex-start;
+	justify-content: center;
+	flex-wrap: wrap;
+	min-height: 78vh;
 }
 
 .types-box {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  padding: 2rem;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	padding: 2rem;
 }
 
-.specific-type-box{
-  background-color: $gray-800;
-  width: 80%;
-  height: 27rem;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  border-radius: 10px;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.75));
-  padding: 1rem;
+.specific-type-box {
+	background-color: $gray-800;
+	width: 80%;
+	height: 27rem;
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+	border-radius: 10px;
+	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.75));
+	padding: 1rem;
 }
 
 .specific-type {
-  width: 20rem;
-  padding: 2rem 3rem;
-  margin: 1rem;
-  border-radius: 10px;
-  font-size: 4rem;
-  font-weight: $font-semi-bold;
-  margin-right: 0.5rem;
-  text-transform: capitalize;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.75));
-  text-align: center;
+	width: 20rem;
+	padding: 2rem 3rem;
+	margin: 1rem;
+	border-radius: 10px;
+	font-size: 4rem;
+	font-weight: $font-semi-bold;
+	margin-right: 0.5rem;
+	text-transform: capitalize;
+	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.75));
+	text-align: center;
 }
 
 .specific-arrows {
-  height: 20rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  margin: 1rem;
+	height: 20rem;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	margin: 1rem;
 }
 
 .specific-arrow {
-  display: flex;
-  align-items: center;
-  padding: 1rem;
-  border-radius: 10px;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.75));
+	display: flex;
+	align-items: center;
+	padding: 1rem;
+	border-radius: 10px;
+	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.75));
 }
 
 .arrow-text {
-  font-size: 2rem;
-  font-weight: $font-semi-bold;
-  margin-right: 0.5rem;
-  color: $black;
+	font-size: 2rem;
+	font-weight: $font-semi-bold;
+	margin-right: 0.5rem;
+	color: $black;
 }
 
 .arrow-icon {
-  font-size: 4rem;
-  height: 4rem;
-  width: 4rem;
-  color: $black;
+	font-size: 4rem;
+	height: 4rem;
+	width: 4rem;
+	color: $black;
 }
 
 .specific-damages {
-  height: 25rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+	height: 25rem;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 .specific-advantages {
-  height: 12rem;
-  width: 30rem;
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-  flex-wrap: wrap;
-  border-bottom: 2px solid #ffffff;
-  border-radius: 10px;
+	height: 12rem;
+	width: 30rem;
+	display: flex;
+	justify-content: center;
+	align-items: flex-end;
+	flex-wrap: wrap;
+	border-bottom: 2px solid #ffffff;
+	border-radius: 10px;
 }
 
 .specific-weaknesses {
-  border-top: 2px solid #ffffff;
-  border-radius: 10px;
-  height: 12rem;
-  width: 30rem;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  flex-wrap: wrap;
+	border-top: 2px solid #ffffff;
+	border-radius: 10px;
+	height: 12rem;
+	width: 30rem;
+	display: flex;
+	justify-content: center;
+	align-items: flex-start;
+	flex-wrap: wrap;
 }
 
 .type {
-  padding: 1rem;
-  margin: 1rem;
-  text-transform: capitalize;
-  border-radius: 10px;
-  cursor: pointer;
-  width: 7rem;
-  text-align: center;
-  color: $black;
-  font-weight: $font-semi-bold;
-  font-size: 1.2rem;
-  border: 0.2rem solid #ffffff;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.75));
+	padding: 1rem;
+	margin: 1rem;
+	text-transform: capitalize;
+	border-radius: 10px;
+	cursor: pointer;
+	width: 7rem;
+	text-align: center;
+	color: $black;
+	font-weight: $font-semi-bold;
+	font-size: 1.2rem;
+	border: 0.2rem solid #ffffff;
+	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.75));
 
-
-  &--fire {
-    color: $black;
-    background-color: #ff3e3e;
-  }
-  &--grass {
-    color: $black;
-    background-color: #0da500;
-  }
-  &--water {
-    color: $black;
-    background-color: #2462d4;
-  }
-  &--bug {
-    color: $black;
-    background-color: #5da807;
-  }
-  &--electric {
-    color: $black;
-    background-color: #ffe600;
-  }
-  &--psychic {
-    color: $black;
-    background-color: #bf3f9a;
-  }
-  &--poison {
-    color: $black;
-    background-color: #a70cad;
-  }
-  &--ground {
-    color: $black;
-    background-color: #a54405;
-  }
-  &--fairy {
-    color: $black;
-    background-color: #ff00cd;
-  }
-  &--rock {
-    color: $black;
-    background-color: #55412a;
-  }
-  &--ghost {
-    color: #ffffff;
-    background-color: #333030;
-  }
-  &--normal {
-    color: $black;
-    background-color: #888888;
-  }
-  &--fighting {
-    color: $black;
-    background-color: #a06119;
-  }
-  &--dragon {
-    color: $black;
-    background-color: #6e85af;
-  }
-  &--ice {
-    color: $black;
-    background-color: #6bbaff;
-  }
-  &--dark {
-    color: #ffffff;
-    background-color: #171717;
-  }
-  &--flying {
-    color: $black;
-    background-color: #2ba068;
-  }
-  &--steel {
-    color: $black;
-    background-color: #656565;
-  }
-  &--blank {
-    color: #ffffff;
-    background-color: #000000;
-  }
+	&--fire {
+		color: $black;
+		background-color: #ff3e3e;
+	}
+	&--grass {
+		color: $black;
+		background-color: #0da500;
+	}
+	&--water {
+		color: $black;
+		background-color: #2462d4;
+	}
+	&--bug {
+		color: $black;
+		background-color: #5da807;
+	}
+	&--electric {
+		color: $black;
+		background-color: #ffe600;
+	}
+	&--psychic {
+		color: $black;
+		background-color: #bf3f9a;
+	}
+	&--poison {
+		color: $black;
+		background-color: #a70cad;
+	}
+	&--ground {
+		color: $black;
+		background-color: #a54405;
+	}
+	&--fairy {
+		color: $black;
+		background-color: #ff00cd;
+	}
+	&--rock {
+		color: $black;
+		background-color: #55412a;
+	}
+	&--ghost {
+		color: #ffffff;
+		background-color: #333030;
+	}
+	&--normal {
+		color: $black;
+		background-color: #888888;
+	}
+	&--fighting {
+		color: $black;
+		background-color: #a06119;
+	}
+	&--dragon {
+		color: $black;
+		background-color: #6e85af;
+	}
+	&--ice {
+		color: $black;
+		background-color: #6bbaff;
+	}
+	&--dark {
+		color: #ffffff;
+		background-color: #171717;
+	}
+	&--flying {
+		color: $black;
+		background-color: #2ba068;
+	}
+	&--steel {
+		color: $black;
+		background-color: #656565;
+	}
+	&--blank {
+		color: #ffffff;
+		background-color: #000000;
+	}
 }
