--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,5 +1,5 @@
-@import "reset.scss";
-@import "includes.scss";
+@import 'reset.scss';
+@import 'includes.scss';
 
 body {
 	background: $black;
@@ -15,8 +15,8 @@ button {
 }
 
 input {
-  outline-offset: 0px !important;
-  outline: none !important;
+	outline-offset: 0px !important;
+	outline: none !important;
 }
 
 button {
