--- a/src/app/containers/components/header/header.component.scss
+++ b/src/app/containers/components/header/header.component.scss
@@ -16,7 +16,7 @@
 
 	&--logo {
 		width: 10vh;
-		border: 0.1rem solid #fff;
+		border: 0.1rem solid #ffffff;
 		border-radius: 50%;
 		margin-right: 1rem;
 		box-shadow: 2px 2px #000000;
