--- a/src/app/containers/components/header/header.component.scss
+++ b/src/app/containers/components/header/header.component.scss
@@ -6,7 +6,7 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  height: 12vh;
+  height: 15vh;
   padding: 0 3rem;
 }
 
@@ -36,6 +36,8 @@
 
 .menu {
   display: flex;
+  align-items: center;
+  justify-content: center;
 
   li {
     font-size: 1.5rem;
@@ -57,4 +59,18 @@
   button {
     margin-left: 2rem;
   }
+}
+
+.login {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.avatar {
+  margin-top: 0.5rem;
+  width: 5rem;
+  height: 5rem;
+  border-radius: 50%;
 }
